--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://developerfolio.js.org/",
-  "name": "developerfolio",
+  "homepage": "/ameyportfolio",
+  "name": "ameyportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
