--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "react-headroom": "^3.0.0",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
-    "react-twitter-embed": "3.0.3",
-    "sass": "^1.32.8"
+    "react-twitter-embed": "3.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -53,6 +52,7 @@
     "dotenv": "^8.2.0",
     "prettier": "^2.3.1",
     "react": "^16.14.0",
+    "sass": "^1.54.4",
     "typescript": "^4.4.4"
   }
 }
