--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^17.0.2",
-    "react-twitter-embed": "3.0.3"
+    "react-twitter-embed": "3.0.3",
+    "set": "^1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
