--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^2.1.1",
     "jest-canvas-mock": "^2.3.1",
+    "react": "^16.14.0",
     "react-dom": "^16.10.2",
     "react-easy-emoji": "^1.3.0",
     "react-headroom": "^3.0.0",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "react-scripts": "^5.0.1",
-    "react-test-renderer": "^17.0.2",
+    "react-scripts": "^3.4.3",
+  
     "react-twitter-embed": "3.0.3",
-    "set": "^1.1.1"
+    "sass": "^1.32.8"
   },
   "scripts": {
-    "predeploy": "npm run build --legacy-peer-deps",
+    "predeploy": "npm run build",
     "start": "node fetch.js && react-scripts start",
     "build": "node fetch.js && react-scripts build",
     "deploy": "gh-pages -b master -d build",
@@ -49,11 +50,9 @@
       "last 1 safari version"
     ]
   },
+
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "prettier": "^2.3.1",
-    "react": "^16.14.0",
-    "sass": "^1.54.4",
-    "typescript": "^4.4.4"
+    "prettier": "^2.3.1"
   }
 }
