--- a/env.example
+++ b/env.example
@@ -5,6 +5,6 @@
 // IMPORTANT: Don't forget to add to update your .gitignore with .env (to avoid making your key public!)
 
 REACT_APP_GITHUB_TOKEN = "YOUR GITHUB TOKEN HERE"
-GITHUB_USERNAME = "YOUR GITHUB USERNAME HERE"
+REACT_APP_GITHUB_USERNAME = "YOUR GITHUB USERNAME HERE"
 // Set to true to fetch profile data from GitHub (remember to remove all components relying on GitHub data if set to false)
-USE_GITHUB_DATA = "true"
+REACT_APP_USE_GITHUB_DATA = "true"
