--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_GITHUB_TOKEN="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"
-REACT_APP_GITHUB_USERNAME="ameygoes"
-REACT_APP_USE_GITHUB_DATA="true"
+REACT_APP_GITHUB_TOKEN=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
+REACT_APP_GITHUB_USERNAME=ameygoes
+REACT_APP_USE_GITHUB_DATA=true
