--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -23,3 +24,6 @@ yarn-error.log*
 
 #user generated content
 public/profile.json
+
+# Local Netlify folder
+.netlify
